<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".connectwithcounsellors.ConnectWithCounsellors">

    <Button
        android:id="@+id/cmhaButton"
        android:layout_width="353dp"
        android:layout_height="55dp"
        android:layout_marginTop="246dp"
        android:layout_marginBottom="430dp"
        android:text="@string/cmha"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/resourceInfoTextView"
        android:layout_width="343dp"
        android:layout_height="363dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="34dp"
        android:layout_marginRight="34dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/here2talkButton"
        android:layout_width="336dp"
        android:layout_height="59dp"
        android:layout_marginTop="75dp"
        android:layout_marginBottom="100dp"
        android:text="@string/here2talk"
        app:backgroundTint="#03A9F4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="299dp"
        android:layout_marginLeft="299dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="16dp"
        android:text="@string/back"
        app:backgroundTint="#050505"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resourceInfoTextView" />

    <Button
        android:id="@+id/crisisLineButton"
        android:layout_width="344dp"
        android:layout_height="59dp"
        android:layout_marginTop="130dp"
        android:text="@string/crisisLine"
        app:backgroundTint="#4CAF50"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/youthspaceButton"
        android:layout_width="342dp"
        android:layout_height="64dp"
        android:layout_marginTop="300dp"
        android:text="@string/youthspace"
        app:backgroundTint="#07752B"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/connectCounsellorsInfoTextView"
        android:layout_width="349dp"
        android:layout_height="167dp"
        android:layout_marginBottom="500dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/connectCounsellorsInfoText"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#050505"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>