<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".yoga.Yoga">

    <TextView
        android:id="@+id/yogaTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/yogaHeaderText"
        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
        android:textColor="#3F51B5"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/yogaStartButtonText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yogaTextView"
        app:strokeColor="#FFFFFF"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/getReadyTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="#00090B"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startButton" />

    <TextView
        android:id="@+id/initialCountdownTextView"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
        android:textColor="#070000"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/getReadyTextView" />

    <ImageView
        android:id="@+id/yogaImageView"
        android:layout_width="match_parent"
        android:layout_height="208dp"
        android:layout_marginTop="52dp"
        android:contentDescription="@string/yogaImageContentDescription"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yogaTextView" />

    <TextView
        android:id="@+id/poseNameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="#2196F3"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yogaImageView" />

    <TextView
        android:id="@+id/countdownTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/poseNameTextView" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/mStepSkipButton"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_gravity="end"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contentDescription="@string/mindfulnessSkipButtonContentDesc"
        android:focusable="true"
        app:backgroundTint="#673AB7"
        app:borderWidth="0dp"
        app:elevation="0dp"
        app:fabSize="normal"
        app:hoveredFocusedTranslationZ="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:rippleColor="@color/purple_500"
        app:srcCompat="@drawable/ic_baseline_arrow_forward_24"
        app:tint="#FFFFFF" />

</androidx.constraintlayout.widget.ConstraintLayout>