...
    <string name="selectFavourite3">Select Favourite 3</string>
    <string name="cancelSelection">Cancel Selection</string>
    <string name="confirmSelection">Confirm Selection</string>

    <!-- Strings for Yoga Component -->
    <string name="yogaPageTitle">YOGA</string>
    <string name="yogaCompletionMessage">GREAT JOB!</string>
    <string name="yogaBeginText">START</string>
    <string name="yogaInitialTimer">0:45</string>
    <string name="yogaStartButtonText">Start</string>
    <string name="yogaHeaderText">YOGA</string>
    <string name="yogaGetReadyText">Get Ready!</string>
    <string name="yogaImageContentDescription">Yoga Image Content Description</string>
    <string name="yogaRestartButtonText">Restart</string>

    <!-- Strings used in the PlayMusic activity -->
    <string name="currentlyPlayingThumbnail">currentlyPlayingThumbnail</string>
    <string name="currentlyPlayingTitle">Song Title</string>
...
